Fix alignment issue in Aside

--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,7 @@ footer>.col-2>div{
     width: 318px;
     height: 586px;
     visibility: hidden;
-    /* background-color: #1a0dab; */
+    background-color: white;
     top: 50px;
     right: 0;
 }
@@ -265,27 +265,40 @@ body{
     overflow-y: scroll;
     padding: 10px 14px;
 }
+
+
+#aside>nav>li{
+    text-align: center;
+}
+
+
+
 #aside>nav>li>a{
     display: inline-block;
     color: #202124;
     width: 84px;
     padding: 6px;
+    border-radius: 8px;
+    position: relative;
 }
 #aside>nav>li>a:hover{
     background-color: #e8f0fe;
-    border-radius: 8px;
 
 }
 
 #aside>nav>li>a>div{
+    position: relative;
     padding: 6px;
     text-align: center;
     font-size: 14px;
+    left:3px;
 }
 #aside>nav>li>a>div:first-of-type{
     width: 64px;
     height: 64px;
     background-image: url(../image/google-products.png);
+    background-position: right;
+    
 }
 
 #aside>nav>li:first-of-type>a>div:first-of-type{
@@ -425,11 +438,6 @@ body{
 #aside>nav>li:nth-of-type(33)>a>div:first-of-type{
     background-position: 0px -2415px;
 }
-
-
-
-
-
 
 
 
